src/unit_tests/Semantics/fail/while-not-return-Object.cl
class A {
f():Int{{
-- valid
while 1 loop 1 pool;
while 1 loop while 2 loop 2 pool pool;

}};
};

class Main {
	main() : Int {
		1
	};
};